Bug 149804 - gtk/qt/win: Combo/list boxes no longer use style colors after 3c6a53b9ce64180b2a03e097c1844f7496f26815
Summary: gtk/qt/win: Combo/list boxes no longer use style colors after 3c6a53b9ce64180...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.5.0
Keywords: bibisected, bisected, regression
: 149782 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-07-01 10:03 UTC by Michael Weghorn
Modified: 2022-07-04 12:28 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Sample document with a combobox form control (10.46 KB, application/vnd.oasis.opendocument.text)
2022-07-01 10:03 UTC, Michael Weghorn
Details
Screenshot for paragraph style combobox with kf5 (62.74 KB, image/png)
2022-07-01 10:05 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2022-07-01 10:03:58 UTC
Created attachment 181062 [details]
Sample document with a combobox form control

Combo/list boxes no longer use the color from the style for the qt5/qt6/kf5 and gtk3 VCL plugins on Linux and on Windows.

Steps to reproduce:

0) Use the kf5 VCL plugin
1) open the attached sample doc "combobox.odt"
2) expand the "Paragraph style" combobox in the toolbar by clicking into it
3) expand the form control combobox in the document by clicking into it

Actual result:

in step 2 and 3: combobox background color is gray, instead of using the style color (e.g. white when using KDE Breeze style)

Expected result: Style color should be used

More information:

* For Windows, steps 2) and 3) apply the same
* For gtk3, only step 3) applies, since 2) uses a welded combobox

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 3fe18ba1b0be041f66124324e96d9cb6d56ff5ce
CPU threads: 12; OS: Linux 5.18; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2022-07-01 10:05:24 UTC
Created attachment 181063 [details]
Screenshot for paragraph style combobox with kf5
Comment 2 Michael Weghorn 2022-07-01 10:05:42 UTC
This is a regression from

commit 3c6a53b9ce64180b2a03e097c1844f7496f26815
Author: Noel Grandin
Date:   Sat Apr 17 14:49:43 2021 +0200

    improve the look of the macOS combobox

I'm currently taking a look at this.
Comment 3 Buovjaga 2022-07-01 10:38:40 UTC
*** Bug 149782 has been marked as a duplicate of this bug. ***
Comment 4 Michael Weghorn 2022-07-01 10:58:18 UTC
Suggested fix: https://gerrit.libreoffice.org/c/core/+/136735
Comment 5 Michael Weghorn 2022-07-01 12:09:27 UTC
(In reply to Buovjaga from comment #3)
> *** Bug 149782 has been marked as a duplicate of this bug. ***

That one also mentions gen, which isn't yet covered by the change mentioned in comment 4.

There's now https://gerrit.libreoffice.org/c/core/+/136738 for this.
Comment 6 Commit Notification 2022-07-02 04:56:07 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/169ff786a6694ab412d53c911550db101fb50876

tdf#149804 Set newly introduced list box colors from system colors

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-07-04 12:19:49 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bf731dedfad5f498e4eebdc9fbf776c6e10eafce

tdf#149804 Set default listbox bg color to white

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.