tdf#149804 Set newly introduced list box colors from system colors

commit 3c6a53b9ce64180b2a03e097c1844f7496f26815
    Date:   Sat Apr 17 14:49:43 2021 +0200

        improve the look of the macOS combobox

had introduced separate style colors to be used for list/combo boxes,
but since those new colors were not set explicitly for gtk3,
qt5/qt6 and Windows, this resulted in style/theme/system colors no longer
being used, but only the default colors introduced in above
commit.

This sets the style/theme/system colors for qt5/qt6, gtk3 and
Windows as well, using the same values that were used
previously.

Change-Id: I31401af38b991e7e0cdc436b894ee0f491a22752
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136735
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>